--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
  
 jobs:
   deploy:
-    if: ${{ github.actor == 'GobikrishnanUnited' }}
+    if: ${{ github.actor == 'SyedJasmine1991' }}
     runs-on: ubuntu-latest
 
     steps:
