--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,14 +35,35 @@ jobs:
           mv build/.* . || true
           rm -rf build
 
-      - name: 📤 Deploy to aaPanel (after move)
+      - name: 🔑 Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/authorized_keys
+          # Remove ssh-keygen step as it's not needed
+          echo "Host *
+            StrictHostKeyChecking no
+            UserKnownHostsFile=/dev/null" > ~/.ssh/config
+          chmod 600 ~/.ssh/config
+
+      - name: 🔍 Test SSH Connection
+        run: |
+          if ! ssh -i ~/.ssh/authorized_keys -o BatchMode=yes ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "echo 'Connection successful'"; then
+            echo "SSH connection failed"
+            exit 1
+          fi
+
+      - name: 📤 Deploy to aaPanel
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          key_path: ~/.ssh/authorized_keys
           port: 22
           source: "./*"
           target: "/www/wwwroot/arconsultancy.unitdtechnologies.com/"
           debug: true
-      
+          strip_components: 0
+          timeout: "600s"
+          rm: false
+          overwrite: true
