--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,21 +35,13 @@ jobs:
           mv build/.* . || true
           rm -rf build
 
-      - name: 🔑 Setup SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
-          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-
-      - name: 📤 Deploy to aaPanel
+      - name: 📤 Deploy to aaPanel (after move)
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
-          key_path: ~/.ssh/deploy_key
+          key: ${{ secrets.SERVER_SSH_KEY }}
           source: "*"
           target: "/www/wwwroot/arconsultancy.unitdtechnologies.com/"
-          timeout: 600s
-          command_timeout: 30m
+          timeout: "120s"
           debug: true
